# rag

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
